# EDA-toolkit

./: .gitignore  FASE2_SUMMARY.md  README.md  UML.drawio  example_fase2.py  normalization_report.json  normalization_report.md  pyproject.toml  requirements.txt
docs/: CSVReader_Guide.md  DelimitedReaders_Guide.md  ExcelReader_Guide.md  Exporter_Guide.md  Factory_Guide.md  HTMLReader_Guide.md  JSONReader_Guide.md  NORMALIZATION_QUICKSTART.md  Normalization_Guide.md  Normalization_Presets_Guide.md  PHASE1_SUMMARY.md  QuickStart_Guide.md  README.md  REFACTORING_PHASE1_GUIDE.md
pandas_toolkit/: __init__.py
pandas_toolkit/io/: __init__.py  csv_reader.py  encoding.py  errors.py  excel_reader.py  exporter.py  factory.py  interfaces.py
pandas_toolkit/io/base/: __init__.py  constants.py  delimited_reader.py  encoding_reader.py  mixins.py  reader.py
pandas_toolkit/io/base/normalizers/: README.md  __init__.py  column_normalizer.py  config.py  date_normalizer.py  null_normalizer.py  numeric_normalizer.py  report.py  string_normalizer.py
pandas_toolkit/io/readers/: __init__.py  csv_reader.py  excel_reader.py  html_reader.py  json_reader.py  pipe_reader.py  tsv_reader.py
tests/: test_csv_reader.py  test_empty_rows_handling.py  test_excel_reader.py  test_exporter.py  test_html_reader.py  test_import.py  test_normalization_config.py  test_normalization_fase2.py  test_normalize.py  test_normalize_mixin_refactored.py  test_normalizers.py
